[package]
name = "morslate"
version = "1.0.0"
edition = "2021"
license = "MIT"
readme = "README.md"
authors = ["Lyssieth <lyssieth@rax.ee>"]
categories = ["command-line-utilities"]
keywords = ["cli", "utility", "morse"]
description = "A commandline morse code encoder/decoder"
repository = "https://github.com/lyssieth/morslate"

[dependencies]
clap = "3.0.0-rc.7"
morse-nostd = "0.1.2"
